bucket_C5/gpgme
# Buildsheet autogenerated by ravenadm tool -- Do not edit.

NAMEBASE=		gpgme
VERSION=		1.24.0
KEYWORDS=		security
VARIANTS=		std
SDESC[std]=		GnuPG Made Easy - high level crypto API
HOMEPAGE=		https://www.gnupg.org/related_software/gpgme/
CONTACT=		nobody

DOWNLOAD_GROUPS=	main
SITES[main]=		GNUPG/gpgme
DISTFILE[1]=		gpgme-1.24.0.tar.bz2:main
DF_INDEX=		1
SPKGS[std]=		set
			primary
			tools
			cpp
			dev
			cppdev
			info

OPTIONS_AVAILABLE=	none
OPTIONS_STANDARD=	none

BUILD_DEPENDS=		libgpg-error:dev:std
			libassuan:dev:std
BUILDRUN_DEPENDS=	libgpg-error:primary:std
			gnupg:primary:std
EXRUN[cpp]=		gpgme:primary:std
EXRUN[tools]=		gpgme:primary:std
EXRUN[dev]=		libassuan:dev:std
			libgpg-error:dev:std

USES=			cpe gmake libtool shebangfix mbsdfix c++:cpp

LICENSE=		LGPL21+:primary
LICENSE_TERMS=		primary:{{WRKDIR}}/TERMS
LICENSE_FILE=		LGPL21+:{{WRKSRC}}/COPYING.LESSER
LICENSE_AWK=		TERMS:"HAVE_CONFIG_H"
LICENSE_SOURCE=		TERMS:{{WRKSRC}}/src/version.c
LICENSE_SCHEME=		solo

INFO=			info:gpgme
CPE_VENDOR=		gnu
FPC_EQUIVALENT=		security/gpgme
INFO_SUBDIR=		.
SHEBANG_FILES=		tests/gpg/pinentry

MUST_CONFIGURE=		gnu
CONFIGURE_ARGS=		--enable-languages="cl cpp"
			--enable-fd-passing
			--disable-g13-test
			--disable-gpg-test
			--disable-gpgconf-test
			--disable-gpgsm-test

INSTALL_TARGET=		install-strip
INSTALL_REQ_TOOLCHAIN=	yes
SOVERSION=		11.33.0
PLIST_SUB=		CPP_SOMAJOR=6
			CPP_SOVERSION=6.21.0

MOUNT_PROCFS=		yes

post-patch:
	${REINPLACE_CMD} -e 's|^clfilesdir.*|clfilesdir=$$\(libdir\)/common-lisp/gpgme|g' \
		${WRKSRC}/lang/cl/Makefile.in

[FILE:254:descriptions/desc.primary]
GnuPG Made Easy (GPGME) is a C library designed to make access to GnuPG
easier for applications.  It provides a High-Level Crypto API for
encryption, decryption, signing, signature verification and key management.
Currently it uses GnuPG as its backend.


[FILE:35:descriptions/desc.tools]
This package contains GnuPG tools.


[FILE:50:descriptions/desc.cpp]
C++ bindings for GnuPG Made Easy (GPGME) library.


[FILE:97:descriptions/desc.cppdev]
This package contains the headers for the  C++ bindings for the
GnuPG Made Easy (GPGME) library.


[FILE:99:distinfo]
61e3a6ad89323fecfaff176bc1728fb8c3312f2faa83424d9d5077ba20f5f7da      1889410 gpgme-1.24.0.tar.bz2


[FILE:57:manifests/plist.primary]
lib/
 libgpgme.so.%%SOMAJOR%%
 libgpgme.so.%%SOVERSION%%


[FILE:114:manifests/plist.tools]
bin/
 gpgme-json
 gpgme-tool
lib/common-lisp/gpgme/
 gpgme-grovel.lisp
 gpgme-package.lisp
 gpgme.asd
 gpgme.lisp


[FILE:69:manifests/plist.cpp]
lib/
 libgpgmepp.so.%%CPP_SOMAJOR%%
 libgpgmepp.so.%%CPP_SOVERSION%%


[FILE:107:manifests/plist.dev]
include/gpgme.h
lib/libgpgme.so
lib/pkgconfig/
 gpgme-glib.pc
 gpgme.pc
 gpgmepp.pc
share/aclocal/gpgme.m4


[FILE:971:manifests/plist.cppdev]
include/gpgme++/
 configuration.h
 context.h
 data.h
 decryptionresult.h
 defaultassuantransaction.h
 editinteractor.h
 encryptionresult.h
 engineinfo.h
 error.h
 eventloopinteractor.h
 exception.h
 global.h
 gpgaddexistingsubkeyeditinteractor.h
 gpgadduserideditinteractor.h
 gpgagentgetinfoassuantransaction.h
 gpggencardkeyinteractor.h
 gpgmefw.h
 gpgmepp_export.h
 gpgmepp_version.h
 gpgrevokekeyeditinteractor.h
 gpgsetexpirytimeeditinteractor.h
 gpgsetownertrusteditinteractor.h
 gpgsignkeyeditinteractor.h
 importresult.h
 key.h
 keygenerationresult.h
 keylistresult.h
 notation.h
 result.h
 scdgetinfoassuantransaction.h
 signingresult.h
 statusconsumerassuantransaction.h
 swdbresult.h
 tofuinfo.h
 trustitem.h
 verificationresult.h
 vfsmountresult.h
include/gpgme++/interfaces/
 assuantransaction.h
 dataprovider.h
 passphraseprovider.h
 progressprovider.h
 statusconsumer.h
lib/libgpgmepp.so
lib/cmake/Gpgmepp/
 GpgmeppConfig.cmake
 GpgmeppConfigVersion.cmake


[FILE:555:patches/patch-lang_cpp_src_engineinfo.h]
In file included from qgpgmebackend.cpp:42:0:
../../../lang/cpp/src/engineinfo.h: In constructor 'GpgME::EngineInfo::Version::Version(const string&)':
../../../lang/cpp/src/engineinfo.h:47:17: error: 'sscanf' is not a member of 'std'
                 std::sscanf(version.c_str(), "%d.%d.%d", &major, &minor, &patch) != 3) {
                 ^


--- lang/cpp/src/engineinfo.h.orig	2024-05-21 15:03:58 UTC
+++ lang/cpp/src/engineinfo.h
@@ -32,6 +32,7 @@
 #include <algorithm>
 #include <string>
 #include <iostream>
+#include <cstdio>
 
 namespace GpgME
 {

